# Tar_prog

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.user.4.10-pre1  File.cpp  File.h  GUI.cpp  GUI.h  IArchive.cpp  IArchive.h  README.md  SeveralFiles.cpp  SeveralFiles.h  TarArchive.cpp  TarArchive.h  cmake_install.cmake  main.cpp  qtcsettings.cmake  tar_prog  tar_prog.cbp
.cmake/api/v1/reply/: cache-v2-3474811670e4cdc8e4f5.json  cache-v2-7fc8440ee4876df0a104.json  cmakeFiles-v1-52935f23ec4772f690a5.json  codemodel-v2-313a7e587d997582a646.json  codemodel-v2-ed078dcf8ace2df422a5.json  index-2020-07-09T15-32-00-0068.json  index-2020-07-09T17-00-45-0323.json  target-tar_prog-Debug-c9260c4d7845196f83e5.json  target-tar_prog-Release-fc64dbf419b3ff6049bb.json
